# otti

./: .editorconfig  .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  publish.yml
otti-core/: Cargo.toml
otti-core/src/: de.rs  key.rs  lib.rs  url.rs
otti-gen/: Cargo.toml
otti-gen/src/: lib.rs
otti-store/: Cargo.toml
otti-store/src/: aead.rs  kdf.rs  lib.rs
provider-aegis/: Cargo.toml
provider-aegis/import/: aegis-export-plain.json  aegis-export.json
provider-aegis/src/: de.rs  lib.rs
provider-andotp/: Cargo.toml
provider-andotp/import/: otp_accounts.json  otp_accounts.json.aes
provider-andotp/src/: lib.rs
provider-authpro/: Cargo.toml
provider-authpro/import/: backup.authpro  backup.json
provider-authpro/src/: de.rs  lib.rs
src/: cli.rs  main.rs  terminal.rs
src/widgets/: code_dialog.rs  help_dialog.rs  list.rs  mod.rs  scrollbar.rs
