[package]
name = "otti-core"
version = "0.2.1"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
data-encoding = "2.3.2"
percent-encoding = { version = "2.1.0", optional = true }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_qs = { version = "0.8.5", optional = true }
thiserror = "1.0.30"
url = { version = "2.2.2", optional = true }

[features]
default = ["otpurl"]
otpurl = ["percent-encoding", "serde_qs", "url"]
