[package]
name = "otti-core"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
data-encoding = "2.3.2"
percent-encoding = { version = "2.2.0", optional = true }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.148", features = ["derive"] }
serde_qs = { version = "0.10.1", optional = true }
thiserror = "1.0.37"
url = { version = "2.3.1", optional = true }

[features]
default = ["otpurl"]
otpurl = ["percent-encoding", "serde_qs", "url"]
