[package]
name = "otti-gen"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hmac = { version = "0.12.1", features = ["std"] }
otti-core = { path = "../otti-core" }
sha1 = "0.10.5"
sha2 = "0.10.6"
thiserror = "1.0.40"
