[package]
name = "otti-store"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
argon2 = { version = "0.5.2", features = ["std", "zeroize"] }
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
directories = "5.0.1"
flate2 = "1.0.27"
otti-core = { path = "../otti-core" }
rmp-serde = "1.1.2"
secrecy = "0.8.0"
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.48"
typenum = "1.17.0"
