[package]
name = "provider-aegis"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes-gcm = { version = "0.10.1", features = ["std"] }
base64 = "0.21.0"
bytes = "1.4.0"
hex = "0.4.3"
otti-core = { path = "../otti-core" }
rand = "0.8.5"
scrypt = { version = "0.11.0", default-features = false, features = ["std"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
serde_repr = "0.1.12"
thiserror = "1.0.40"
uuid = { version = "1.3.0", features = ["v4"] }

[dev-dependencies]
maplit = "1.0.2"
pretty_assertions = "1.3.0"
