[package]
name = "provider-aegis"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
base64 = "0.21.7"
bytes = "1.5.0"
hex = "0.4.3"
otti-core = { path = "../otti-core" }
rand = "0.8.5"
scrypt = { version = "0.11.0", default-features = false, features = ["std"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_repr = "0.1.18"
thiserror = "1.0.56"
uuid = { version = "1.7.0", features = ["v4"] }

[dev-dependencies]
maplit = "1.0.2"
pretty_assertions = "1.4.0"
