[package]
name = "provider-andotp"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes-gcm = { version = "0.10.1", features = ["std"] }
bytes = "1.2.1"
hmac = "0.12.1"
otti-core = { path = "../otti-core" }
pbkdf2 = { version = "0.11.0", default-features = false }
rand = "0.8.5"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
sha-1 = "0.10.0"
thiserror = "1.0.37"

[dev-dependencies]
pretty_assertions = "1.3.0"
