[package]
name = "provider-andotp"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes-gcm = { version = "0.10.1", features = ["std"] }
bytes = "1.3.0"
hmac = "0.12.1"
otti-core = { path = "../otti-core" }
pbkdf2 = { version = "0.11.0", default-features = false }
rand = "0.8.5"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
sha1 = "0.10.5"
thiserror = "1.0.37"

[dev-dependencies]
pretty_assertions = "1.3.0"
