[package]
name = "provider-authpro"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes = "0.8.2"
base64 = "0.21.0"
block-padding = { version = "0.3.2", features = ["std"] }
bytes = "1.4.0"
cbc = { version = "0.1.2", features = ["std"] }
hmac = "0.12.1"
otti-core = { path = "../otti-core" }
pbkdf2 = { version = "0.11.0", default-features = false }
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_repr = "0.1.10"
sha1 = "0.10.5"
thiserror = "1.0.38"

[dev-dependencies]
maplit = "1.0.2"
pretty_assertions = "1.3.0"
